--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,26 @@ blockquote {
  border-style: solid;
 }
 
-.content {
+.container {
+  position: relative;
+  width: 100%;
   max-width: 700px;
-  margin-left:auto;
-  margin-right:auto;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box; }
+
+/* For devices larger than 400px */
+@media (min-width: 400px) {
+  .container {
+    width: 85%;
+    padding: 0; }
 }
+
+/* For devices larger than 550px */
+@media (min-width: 550px) {
+  .container {
+    width: 80%;
+  }
 
 ul {
   margin:10px 0;
